# memory-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  deny.toml  release-please-config.json
.github/: FUNDING.yml
.github/workflows/: build.yml  lint-pr.yml  publish-crate.yml  publish-image.yml  release.yml  tag-release.yml  update-release-notes.yml
.serena/: project.yml
.serena/memories/: deployment_target.md  project_overview.md  session_handoff.md
deploy/k8s/: deployment.yml  namespace.yml  pvc.yml  rbac.yml  secret.yml  service.yml
docs/: ROADMAP.md  deployment-workstream.md  deployment.md
docs/adr/: 0005-fastembed-configurable-from-start.md  0006-structured-observability-from-day-one.md  0007-recency-based-conflict-resolution.md  0008-migration-as-cli-and-mcp-tools.md  0009-configurable-branch-name.md  0013-k8s-secret-token-storage.md  0014-container-deployment-strategy.md  0015-multi-user-memory-namespacing.md  0016-candle-direct-embeddings.md  0017-msrv-match-deps.md  0018-dedicated-github-app-for-release-please.md  0021-scope-affinity-defaults.md  0022-scope-partitioned-indexes.md
src/: auth.rs  embedding.rs  error.rs  fs_util.rs  index.rs  lib.rs  main.rs  repo.rs  server.rs  types.rs
src/embedding/: candle.rs  mod.rs
tests/: candle_embedding.rs  scope_filter_integration.rs
