[package]
name = "memory-mcp"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
k8s = ["dep:kube", "dep:k8s-openapi"]

[dependencies]
rmcp = { version = "1.1", features = ["server", "macros", "transport-streamable-http-server"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
git2 = "0.20"
fastembed = "5"
usearch = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4"] }
schemars = "0.8"
tokio-util = { version = "0.7", features = ["rt"] }
libc = "0.2"
keyring = { version = "3", features = ["sync-secret-service", "apple-native", "windows-native"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
kube = { version = "3.1", default-features = false, features = ["client", "rustls-tls"], optional = true }
k8s-openapi = { version = "0.27", features = ["v1_31"], optional = true }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
