[package]
name = "memory-mcp"
version = "0.5.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "MCP server for semantic memory — pure-Rust embeddings, vector search, git-backed storage"
repository = "https://github.com/butterflyskies/memory-mcp"
homepage = "https://github.com/butterflyskies/memory-mcp"
keywords = ["mcp", "memory", "embeddings", "semantic-search"]
categories = ["command-line-utilities", "artificial-intelligence", "text-processing"]
rust-version = "1.88"

[features]
k8s = ["dep:kube", "dep:k8s-openapi"]

[dependencies]
rmcp = { version = "1.1", features = ["server", "macros", "transport-streamable-http-server"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
git2 = "0.20"
usearch = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Maintained fork of deprecated serde_yaml (dtolnay archived the original).
serde_yaml_ng = "0.10"
# Disable default features to trim unused chrono subsystems; clock provides
# Utc::now(), serde provides DateTime serialisation — that's all we use.
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4"] }
tokio-util = { version = "0.7", features = ["rt"] }
libc = "0.2"
keyring = { version = "3", features = ["sync-secret-service", "apple-native", "windows-native"] }
# Disable default features to avoid pulling in native-tls; rustls is the sole
# HTTP TLS stack. json enables reqwest::Response::json() for OAuth device flow.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
dirs = "6"
mcp-session = "0.1"

# Candle direct — pure-Rust BERT inference for embeddings.
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
# Disable defaults to drop onig (C regex library); fancy-regex is a pure-Rust
# drop-in. esaxx_fast enables the C++ suffix-array builder for BPE tokenizers.
tokenizers = { version = "0.22", default-features = false, features = ["progressbar", "fancy-regex", "esaxx_fast"] }
# Disable defaults to drop native-tls and the tokio/reqwest async API we don't
# use. ureq provides the sync download API with rustls TLS by default.
hf-hub = { version = "0.4", default-features = false, features = ["ureq"] }

# Optional dependencies gated behind features.
# Disable defaults to avoid pulling in native-tls; rustls-tls matches the rest
# of the crate's TLS strategy. Only the client feature is needed (no runtime).
kube = { version = "3.1", default-features = false, features = ["client", "rustls-tls"], optional = true }
k8s-openapi = { version = "0.27", features = ["v1_31"], optional = true }
secrecy = "0.10.3"

# Vendor native C libraries so the binary statically links its own copies
# rather than depending on whatever versions the host OS provides at runtime.
# This makes builds reproducible and removes host library version variance.
# Trade-off: distro security patches (e.g. apt upgrade openssl) no longer
# apply — a rebuild is required to pick up OpenSSL CVEs. Dependabot monitors
# for advisory-triggered version bumps to openssl-sys.
# D-Bus (via keyring) is the only remaining system dynamic link — it must
# match the running D-Bus daemon and cannot be vendored.
openssl = { version = "0.10", features = ["vendored"] }
libz-sys = { version = "1", features = ["static"] }

[dev-dependencies]
git2 = "0.20"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
